sylvander-tui/tests/snapshots/snapshots__layout_standard_breakpoint.snap
---
source: sylvander-tui/tests/snapshots.rs
assertion_line: 627
expression: "render_buf(s, 88, 24)"
---
❯ Add JWT auth.                                                                         
                                                                                        
⏺ Inspecting router.                                                                    
                                                                                        
                                                                                        
                                                                                        
                                                                                        
                                                                                        
                                                                                        
                                                                                        
                                                                                        
                                                                                        
                                                                                        
                                                                                        
                                                                                        
                                                                                        
                                                                                        
                                                                                        
                                                                                        
                                                                                        
────────────────────────────────────────────────────────────────────────────────────────
❯                                                                                       
────────────────────────────────────────────────────────────────────────────────────────
· idle · model — · branch — · session —
