sylvander-tui/tests/snapshots/snapshots__layout_wide_breakpoint.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(s, 132, 30)"
---
        ⢀⣠⣶⣾⣀           Sylvander                                                                                                   
      ⣠⣴⣶⣾⠿⢿⣷⣶⣤⡀        agent workspace                                                                                             
⢀⣄⡴⠆ ⣴⣿⣿⠋⣁ ⢀⡙⢻⣟⣿⡆                                                                                                                   
 ⣩⣶⣆⡀⣿⣿⣯⡘⠿ ⠸⠟⣠⣿⣿⡻⣠⣄⡀    model     —                                                                                                 
⢾⣟⢻⠇⢋⣿⡾⢻⡿⣷⡆⣾⡿⣿⡿⣾⣯⠹⡿⣿⡄   workspace ~/workspace                                                                                       
 ⠁   ⠋ ⠈      ⠁⠈⠋  ⠘    branch    — · session new                                                                                   
                        What should we work through?                                                                                
                                                                                                                                    
                                                                                                                                    
❯ Add JWT auth.                                                                                                                     
                                                                                                                                    
⏺ Inspecting router.                                                                                                                
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
❯                                                                                                                                   
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
· idle · model — · branch — · session — · 0 tok                                                                  ↵ send   ⇧↵ newline
