sylvander-tui/tests/snapshots/snapshots__many_attachments_collapses_with_more_indicator.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(&state, 80, 24)"
---
Sylvander · deepseek-v4-flash · Disconnected · Connecting...                    
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
  ⎘ [paste: 10 lines · 30B] L1 L2 L3 L4 L5 L6 L7 L8 L9 L10                      
  ⎘ [paste: 10 lines · 30B] L1 L2 L3 L4 L5 L6 L7 L8 L9 L10                      
  ⎘ [paste: 10 lines · 30B] L1 L2 L3 L4 L5 L6 L7 L8 L9 L10                      
  ⎘ [paste: 10 lines · 30B] L1 L2 L3 L4 L5 L6 L7 L8 L9 L10                      
  ⎘ … (+2 more attachments)                                                     
>                                                                               
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
Enter:send  Esc:quit
