sylvander-tui/tests/snapshots/snapshots__model_picker_shows_server_truth_and_reasoning_control.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(state, 100, 28)"
---
              ⢀⣤⣴⡆               Sylvander                                                          
            ⢀⣚⣿⣿⣿⣿⢓⣀             agent workspace                                                    
         ⢀⣴⣾⢿⣳⡿⠛⠙⢿⣾⣿⣷⣦           model     anthropic-compatible/claude-sonnet / low                 
  ⢀ ⣴⠆  ⣰⣿⣿⣵⠟⠉    ⠙⠻⣿⠿⣾⣦         workspace ~/workspace                                              
 ⠈⠛⠃⡁⡀  ⣿⡻⢾⡇ ⣶⣶  ⣶⣆ ⢻⣥⣿⣿⡄        branch    — · session new                                          
 ⢀⣤⣶⣿⡣⣤⢀⢽⠿⣮⢷⣄⣉⠁  ⠉⣁⣤⡎⣵⠟⣭⣁⡔⢿⣄⡀                                                                       
 ⣾⣿⠛⢹⡇⠈⢨⣶⡶⠎⢛⡿⣿⣳⡆⣶⣿⡿⣟⣋⢷⣶⣮⡅⢸⡜⢿⣿⡄   What should we work through?                                       
 ⠈⠻⠁   ⠘⠞⠁ ⠒⠁ ⠉⠁⠉⠉ ⠉⠑ ⠈⣿⠇ ⠁⠈⠿⠁                                                                      
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────
❯                                                                                                   
────────────────────────────────────────────────────────────────────────────────────────────────────
  Model · applies next turn  current  anthropic-compatible/claude-sonnet  reasoning low  · in $3 /  
                                                                                                    
  › ● claude-sonnet           anthropic-compatible  low                                             
    ○ fast-code               deprecated → claude-sonnet                                            
────────────────────────────────────────────────────────────────────────────────────────────────────
/model claude-sonnet low                                                                            
────────────────────────────────────────────────────────────────────────────────────────────────────
◌ connecting · model anthropic-compatible/claude-sonnet / low · branch —   connecting…   draft local
