sylvander-tui/tests/snapshots/snapshots__multiline_composer_renders_two_rows.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(&state, 80, 24)"
---
◖S◗  Sylvander  new session                                             — · main
/Users/christmix/OraculoSpace/Sylvander/sylvander-tui · session —               
────────────────────────────────────────────────────────────────────────────────
                                                                                
                                                                                
◖S◗  SYLVANDER                                                                  
      intelligent terminal workspace                                            
                                                                                
      /Users/christmix/OraculoSpace/Sylvander/sylvander-tui                     
      What are we building today?                                               
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
│› ab                                                                          │
│  cd                                                                          │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│Type while I work — steer, queue, or interrupt.                               │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
