sylvander-tui/tests/snapshots/snapshots__one_user_message_visible.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(state, 80, 24)"
---
        ⢀⣠⣶⣾⣀           Sylvander                                               
      ⣠⣴⣶⣾⠿⢿⣷⣶⣤⡀        agent workspace                                         
⢀⣄⡴⠆ ⣴⣿⣿⠋⣁ ⢀⡙⢻⣟⣿⡆                                                               
 ⣩⣶⣆⡀⣿⣿⣯⡘⠿ ⠸⠟⣠⣿⣿⡻⣠⣄⡀    model     —                                             
⢾⣟⢻⠇⢋⣿⡾⢻⡿⣷⡆⣾⡿⣿⡿⣾⣯⠹⡿⣿⡄   workspace ~/workspace                                   
 ⠁   ⠋ ⠈      ⠁⠈⠋  ⠘    branch    — · session new                               
                        What should we work through?                            
                                                                                
                                                                                
⏺ hi there                                                                      
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
❯                                                                               
────────────────────────────────────────────────────────────────────────────────
◌ connecting · model — · branch — · session —
