sylvander-tui/tests/snapshots/snapshots__palette_empty_filter_shows_all.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(&state, 90, 22)"
---
                                                                                          
                                                                                          
                    ┌ Commands ─────────────────────────────────────┐                     
                    │/_                                             │                     
                    │───────────────────────────────────────────────│                     
                    │  › /new          Start a clean local session  │                     
                    │    /sessions     Browse and switch sessions   │                     
                    │    /resume       Resume a persisted session   │                     
                    │    /rename       Rename the current persisted │                     
                    │    /fork         Fork the current persisted se│                     
                    │    /clear        Clear the local transcript   │                     
                    │    /help         Show interaction help        │                     
                    │    /theme        Change the active TUI theme  │                     
                    │    /tools        Toggle tool details          │                     
                    │    /queue        Inspect or edit prompts waiti│                     
                    │    /tasks        Inspect or cancel one backgro│                     
                    │    /attachments  Inspect, reorder, or remove d│                     
                    │    ↓ 6 more                                   │                     
────────────────────└───────────────────────────────────────────────┘─────────────────────
>                                                                                         
──────────────────────────────────────────────────────────────────────────────────────────
◌ connecting · model — · branch — · session —
