sylvander-tui/tests/snapshots/snapshots__palette_shows_dynamic_command_source_and_rejections.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(state, 100, 24)"
---
              ⢀⣤⣴⡆               Sylvander                                                          
            ⢀⣚⣿⣿⣿⣿⢓⣀             agent workspace                                                    
         ⢀⣴⣾⢿⣳⡿⠛⠙⢿⣾⣿⣷⣦           model     —                                                        
  ⢀ ⣴⠆  ⣰⣿⣿⣵⠟⠉    ⠙⠻⣿⠿⣾⣦         workspace ~/workspace                                              
 ⠈⠛⠃⡁⡀  ⣿⡻⢾⡇ ⣶⣶  ⣶⣆ ⢻⣥⣿⣿⡄        branch    — · session new                                          
 ⢀⣤⣶⣿⡣⣤⢀⢽⠿⣮⢷⣄⣉⠁  ⠉⣁⣤⡎⣵⠟⣭⣁⡔⢿⣄⡀                                                                       
 ⣾⣿⠛⢹⡇⠈⢨⣶⡶⠎⢛⡿⣿⣳⡆⣶⣿⡿⣟⣋⢷⣶⣮⡅⢸⡜⢿⣿⡄   What should we work through?                                       
 ⠈⠻⠁   ⠘⠞⠁ ⠒⠁ ⠉⠁⠉⠉ ⠉⠑ ⠈⣿⠇ ⠁⠈⠿⠁                                                                      
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────
❯ /review                                                                                           
────────────────────────────────────────────────────────────────────────────────────────────────────
› /review          Ask Sylvander to review workspace changes                                        
  /preview         requires a trusted desktop host                                                  
  /security-review Review a workspace scope · agent configuration                                   
  /external-review external source is not trusted for commands                                      
  /status          conflicts with a built-in command or alias                                       
────────────────────────────────────────────────────────────────────────────────────────────────────
● choosing command · model — · branch —                         ↑↓ select   tab complete · esc close
