sylvander-tui/tests/snapshots/snapshots__palette_with_no_match.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(&state, 90, 22)"
---
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                    ┌ Commands ─────────────────────────────────────┐                     
                    │  (no commands match)                          │                     
                    │                                               │                     
                    │                                               │                     
                    │                                               │                     
                    │                                               │                     
                    │                                               │                     
                    └───────────────────────────────────────────────┘                     
                                                                                          
                                                                                          
                                                                                          
──────────────────────────────────────────────────────────────────────────────────────────
>                                                                                         
──────────────────────────────────────────────────────────────────────────────────────────
◌ connecting · model — · branch — · session —
