sylvander-tui/tests/snapshots/snapshots__paste_over_8_lines_collapses_to_attachment_token.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(&state, 80, 24)"
---
        ⣠⣤    ⣠⣿⣿⠟⣡⡾⠛⠉     ⠉⠻⢿⣬⡻⣿⡌⣧⡀                                            
    ⢠⣴⣄⠸⠛⠉   ⢰⣿⣿⡃⣿⡟  ⣀⡀   ⢀⡀  ⢹⣷⠄⣾⣿⣿                                            
     ⠈⠁⠠⡀⣀   ⢰⣦⡙⠇⣿⠁ ⢸⣿⣿   ⣿⣿⡆  ⣿⡦⢏⣵⣶⡆                                           
     ⣠⣔⣚⠿⠏⣠⣄ ⢈⣙⢿⣦⡩⣷⣀ ⠉⠁   ⠈⠉ ⣀⣴⠌⣴⡿⢋⣤⠁⢀⠲⠿⢤⡀                                      
   ⢀⣼⣿⣿⠟⠼⣷ ⠏⠘⢂⡡⢤⣌⠳⠮⣝⡻⢷⣤⣄ ⣠⣴⣾⠿⣛⣥⠞⣫⡤⢌⡑⠛⠉⣶⠸⣿⣿⣷                                     
   ⠘⢿⡟⡄ ⠸⠃  ⢠⡛⠿⡆⠉ ⡐⠬⠙⠳⠌⣟ ⣿⡿⠽⠋⢥⡶⢂⠙⠱⠿⢟⡃ ⠙⡇⠈⢹⣿⡇                                    
     ⠙       ⠻⠁   ⠉            ⠋  ⠈⡿⠃     ⠟                                     
                                                                                
                                                                                
  Sylvander                                                                     
  agent workspace                                                               
                                                                                
  model     —                                                                   
  workspace ~/workspace                                                         
  branch    —                                                                   
  session   new                                                                 
                                                                                
  What should we work through?                                                  
                                                                                
────────────────────────────────────────────────────────────────────────────────
▣ line_1_line_2_line_3_…                                                        
>                                                                               
────────────────────────────────────────────────────────────────────────────────
◌ connecting · model — · branch — · session —
